fix: on website input grouping heading overlaps example
closes #3802

--- a/src/website/src/styles/components.scss
+++ b/src/website/src/styles/components.scss
@@ -420,7 +420,6 @@ _:-ms-fullscreen,
   &-img {
     margin: 0 auto;
     width: 100%;
-    height: 100%;
     text-align: center;
     > * {
       margin: 0;
